# dig-portal-data-models

./: .gitattributes  .gitignore  CLAUDE.md  INSTRUCTIONS.md  README.md  pyproject.toml
.claude/: settings.json
raw/phenotype/: ORDO_en_4.5.owl  Phenotypes.tsv  amp-traits-mapping-portal-phenotypes_06262024.csv  efo.owl  gcat_v1.0.3.1.1.tsv  gcat_v1.0.3.1.tsv  portal_to_mesh_curated_collected.tsv
raw/phenotype/mondo_mappings/: mondo_broadmatch_icd10cm.sssom.tsv  mondo_closematch_icd10cm.sssom.tsv  mondo_exactmatch_icd10cm.sssom.tsv  mondo_hasdbxref_icd10cm.sssom.tsv  mondo_narrowmatch_icd10cm.sssom.tsv  mondo_relatedmatch_icd10cm.sssom.tsv
schemas/phenotype/: portal_phenotype.yaml
scripts/phenotype/: 01_parse_sources.py  02_parse_efo_xrefs.py  03_enrich.py  04_generate_output.py  05_quality_report.py  07_validate_mappings.py  09_export_review_table.py  10_apply_review.py  generate.sh
scripts/phenotype/v0.0.1/: 01_parse_sources.py  02_parse_efo_xrefs.py  03_enrich.py  04_generate_output.py  05_quality_report.py  07_validate_mappings.py  09_export_review_table.py  10_apply_review.py  generate.sh
versions/phenotype/v0.0.1/: mapping_coverage.md  portal_phenotype_mappings.sssom.tsv  portal_phenotype_registry.tsv  portal_phenotypes_flat.tsv
